syntax = "proto3";
package cataloguePackage;
service Catalogue {
    //unary
    rpc addProduct(ProductAddRequest) returns (Product);
    rpc getProduct(ProductGetRequest) returns (Product);
    //server streaming
    rpc readCatalogue(nothing) returns (CatalogueReadResponse);
}
message nothing {}

message ProductAddRequest {
    string name = 1;
    float price = 2;
    int32 quantity = 3;
    string image = 4;
}
message Product {
    int32 productId = 2;
    float price = 3;
    int32 quantity = 4;
    string image = 5;
    string name=6;
}
message CatalogueReadResponse {
    repeated Product items = 1;
}
message ProductGetRequest {
    int32 productId = 1;
}
